# memecoinbot

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: kid_monster_landing.html  release_checklist.md  runbook.md  security.md
include/ui/: data_subscription.h  imgui_compat.h  layout.h  main_window.h  theming.h
include/ui/views/: positions_view.h  price_chart_view.h  trade_history_view.h
src/app/: main.cpp
src/common/: logging.cpp  logging.h
src/market_data/: pumpfun_client.cpp  pumpfun_client.h
src/security/: secret_store.cpp  secret_store.h  solana_signer.cpp  solana_signer.h  totp.cpp  totp.h
src/telegram/: bot.cpp  bot.h  telegram_client.cpp  telegram_client.h
src/trading/: engine.cpp  engine.h  engine_main.cpp  pumpfun_bridge.cpp  pumpfun_bridge.h  trading_engine.h
src/ui/: data_subscription.cpp  imgui_helpers.h  imgui_main.cpp  imgui_trading_app.cpp  imgui_trading_app.h  layout.cpp  main_window.cpp  theming.cpp
src/ui/views/: positions_view.cpp  price_chart_view.cpp  trade_history_view.cpp
tests/market_data/: test_pumpfun_client.cpp
tests/security/: test_security.cpp
tests/stubs/nlohmann/: json.hpp
tests/trading/: test_engine.cpp
